--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>som chalan, ktory rad programuje</p>
 <hr>
 <h2>Vypocuj si tuto pesnicku mimo mojej stranky,je fakt dobra</h2>
-<a href="https://www.youtube.com/watch?v=NLmqqimN_6M" target="_blank">Klikni</a>
+<a id="gombik" href="https://www.youtube.com/watch?v=NLmqqimN_6M" target="_blank">Klikni</a>
 
 <h2>Alebo si to vypocuj na mojej stranke :)</h2>
 
