--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/NLmqqimN_6M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <hr>
 
-<h2>Letisko O:)</h2>
-<a href="https://bratislavaden.sk/damska-jazda/milujem-letny-nefrustrovany-fb/happy-traveler-waiting-for-the-flight-in-airport/" target="_blank"><img src="images/cestovanie-lietadlo-225x225.jpg"></a>
+<h2>Who knows what happens when you click ¯\_(ツ)_/¯</h2>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="images/cestovanie-lietadlo-225x225.jpg"></a>
 </body>
 </html>
